--- a/StakingDAPP/swapfolio8/assets/css/main.css
+++ b/StakingDAPP/swapfolio8/assets/css/main.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@500&display=swap');
-
 body {
     background: #232F3F;
 }
@@ -127,7 +126,8 @@ button.btn.btn-stake {
     letter-spacing: 2px;
 }
 
-.btn-stake:focus, button.btn.btn-stake-danger.danger-colors {
+.btn-stake:focus,
+button.btn.btn-stake-danger.danger-colors {
     box-shadow: 0 0 0 0;
 }
 
@@ -185,12 +185,28 @@ input {
     color: white;
 }
 
-#login_message, #swfl_message, #stack_message, #stack_message_danger, #withdraw_message, #withdraw_message_danger, #spinner, #btn-stake2, #stake-message, #spinner-withdraw,
-#btn-withdraw2, #withdraw-message, #approving {
+#login_message,
+#swfl_message,
+#stack_message,
+#stack_message_danger,
+#withdraw_message,
+#withdraw_message_danger,
+#spinner,
+#btn-stake2,
+#stake-message,
+#spinner-withdraw,
+#btn-withdraw2,
+#withdraw-message,
+#approving,
+#funds-message,
+#withdrawTransactionLink,
+#transactionLink,
+#staketransactionLink {
     display: none;
 }
 
-#spinner, #spinner-withdraw {
+#spinner,
+#spinner-withdraw {
     height: 20px;
     width: 20px;
     text-align-last: center;
@@ -201,7 +217,8 @@ input {
     width: 50%;
 }
 
-#approve, #approving {
+#approve,
+#approving {
     font-family: Fira Mono;
     margin-top: 18px;
 }
@@ -230,16 +247,13 @@ input {
         padding-top: 4px;
         /* margin-left: -16px; */
     }
-
     #btn-withdraw1 {
         width: 100%;
         margin-left: 0;
     }
-
     #second-swfl-value {
         text-align-last: left !important;
     }
-
     .main-section {
         height: fit-content;
     }
